--- a/Resources/Prototypes/_CP14/Roles/Jobs/Command/captain.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Command/captain.yml
@@ -10,6 +10,7 @@
   canBeAntag: false
   supervisors: cp14-job-supervisors-command
   weight: 10
+  setPreference: false #TEMP
 
 - type: startingGear
   id: CP14CaptainGear
