--- a/Resources/Prototypes/_CP14/Maps/arenas.yml
+++ b/Resources/Prototypes/_CP14/Maps/arenas.yml
@@ -76,7 +76,7 @@
             CP14Adventurer: [ -1, -1 ]
             CP14Alchemist: [ 2, 3 ]
             CP14Innkeeper: [ 3, 4 ]
-            CP14Captain: [1, 1]
+            #CP14Captain: [1, 1]
             CP14Commandant: [1, 1]
             CP14Banker: [3, 4]
             #CP14GuardCommander: [1, 1]
