--- a/Resources/Prototypes/_CP14/Roles/Jobs/Command/guard_commander.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Command/guard_commander.yml
@@ -10,6 +10,7 @@
   canBeAntag: false
   supervisors: cp14-job-supervisors-command
   weight: 2
+  setPreference: false #TEMP
 
 - type: startingGear
   id: CP14GuardCommanderGear
