--- a/Resources/Prototypes/_CP14/Maps/arenas.yml
+++ b/Resources/Prototypes/_CP14/Maps/arenas.yml
@@ -11,7 +11,7 @@
           mapNameTemplate: "Meteor Arena"
         - type: StationJobs
           availableJobs:
-            CP14Captain: [ -1, -1 ]
+            CP14Adventurer: [ -1, -1 ]
 
 - type: gameMap
   id: AlchemyTest
@@ -35,7 +35,7 @@
           availableJobs:
             CP14Adventurer: [ -1, -1 ]
             CP14Alchemist: [ -1, -1 ]
-            CP14Captain: [1, 1]
+            #CP14Captain: [1, 1]
 
 - type: gameMap
   id: BattleRoyale
@@ -54,7 +54,7 @@
           availableJobs:
             CP14Adventurer: [ -1, -1 ]
             CP14Alchemist: [ -1, -1 ]
-            CP14Captain: [1, 1]
+            #CP14Captain: [1, 1]
         - type: StationBiome
           biome: CP14GrassFill
 
