--- a/Resources/Prototypes/_CP14/Maps/debug.yml
+++ b/Resources/Prototypes/_CP14/Maps/debug.yml
@@ -12,7 +12,7 @@
         - type: StationJobs
           availableJobs:
             CP14Adventurer: [ -1, -1 ]
-            CP14Captain: [ -1, -1 ]
+            #CP14Captain: [ -1, -1 ]
 
 - type: gameMap
   id: Dev
