--- a/Resources/Prototypes/_CP14/Tiles/natural.yml
+++ b/Resources/Prototypes/_CP14/Tiles/natural.yml
@@ -98,7 +98,7 @@
     West: /Textures/_CP14/Tiles/Grass/double_edge_W.png
   baseTurf: CP14FloorDirt
   deconstructTools: [ CP14Digging ]
-  itemDrop: CP14DirtEffect
+  itemDrop: CP14RandomDirtLootSpawner
   isSubfloor: false
   footstepSounds:
     collection: FootstepGrass
@@ -131,7 +131,7 @@
     West: /Textures/_CP14/Tiles/GrassLight/double_edge_W.png
   baseTurf: CP14FloorDirt
   deconstructTools: [ CP14Digging ]
-  itemDrop: CP14DirtEffect
+  itemDrop: CP14RandomDirtLootSpawner
   isSubfloor: false
   footstepSounds:
     collection: FootstepGrass
@@ -164,7 +164,7 @@
     West: /Textures/_CP14/Tiles/GrassTall/double_edge_W.png
   baseTurf: CP14FloorDirt
   deconstructTools: [ CP14Digging ]
-  itemDrop: CP14DirtEffect
+  itemDrop: CP14RandomDirtLootSpawner
   isSubfloor: false
   footstepSounds:
     collection: FootstepGrass
