--- a/Resources/Prototypes/_CP14/Entities/Structures/Flora/Gatherable/flowers.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Flora/Gatherable/flowers.yml
@@ -1,5 +1,5 @@
 - type: entity
-  id: CP14GatherableFlowersYellow
+  id: CP14GatherableDayflin
   parent: CP14GatherableWildBase
   name: yellow dayflin
   description: A yellow sun flower that smells like melted milk. Can be processed into a yellow dye.
@@ -17,9 +17,11 @@
         world1: ""
         world2: ""
         world3: ""
+        world4: ""
+        world5: ""
   - type: Gatherable
     loot:
-      All: CP14GatherFlowersYellow
+      All: CP14GatherDayflin
     toolWhitelist:
       tags:
         - CP14HerbalGathering
@@ -27,8 +29,8 @@
         - Hands
 
 - type: entityLootTable
-  id: CP14GatherFlowersYellow
+  id: CP14GatherDayflin
   entries:
-  - id: CP14FlowersYellow
+  - id: CP14Dayflin
     amount: 1
     maxAmount: 2
