--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -115,6 +115,10 @@ CP14WallWhitebrick: CP14WallMarbleBrick
 #2024-10-24
 CP14SpawnPointQuartermaster: CP14SpawnPointCommandant
 CP14SpawnPointMerchant: CP14SpawnPointBanker
+
+#2024-10-27
+CP14GatherableFlowersYellow: CP14GatherableDayflin
+CP14FlowersYellow: CP14Dayflin
 # <---> CrystallPunk migration zone end
 
 
