--- a/Resources/Prototypes/_CP14/Reagents/basic-effects.yml
+++ b/Resources/Prototypes/_CP14/Reagents/basic-effects.yml
@@ -36,12 +36,28 @@
   color: "#633223"
   physicalDesc: cp14-reagent-physical-desc-ferrous
   metabolisms:
-    Medicine:
+    Poison:
       effects:
       - !type:HealthChange
         damage:
           groups:
             Brute: 3
+
+- type: reagent
+  id: CP14BasicEffectHealPoison
+  name: cp14-reagent-name-basic-heal-poison
+  desc: cp14-reagent-desc-basic-heal-poison
+  group: CP14BasicEffect
+  flavor: CP14Bitterly
+  color: "#82ba3d"
+  physicalDesc: cp14-reagent-physical-desc-viscous
+  metabolisms:
+    Medicine:
+      effects:
+      - !type:HealthChange
+        damage:
+          types:
+            Poison: -10
 
 - type: reagent
   id: CP14BasicEffectDamagePoison
@@ -58,22 +74,6 @@
         damage:
           types:
             Poison: 10
-
-- type: reagent
-  id: CP14BasicEffectHealPoison
-  name: cp14-reagent-name-basic-heal-poison
-  desc: cp14-reagent-desc-basic-heal-poison
-  group: CP14BasicEffect
-  flavor: CP14Bitterly
-  color: "#82ba3d"
-  physicalDesc: cp14-reagent-physical-desc-viscous
-  metabolisms:
-    Poison:
-      effects:
-      - !type:HealthChange
-        damage:
-          types:
-            Poison: -10
 
 - type: reagent
   id: CP14BasicEffectSatiateHunger
@@ -112,7 +112,7 @@
   color: "#a3511a"
   physicalDesc: cp14-reagent-physical-desc-sparkling
   metabolisms:
-    Poison:
+    Medicine:
       effects:
       - !type:HealthChange
         damage:
@@ -162,6 +162,22 @@
       effects:
       - !type:CP14ManaChange
         manaDelta: -10
+
+- type: reagent
+  id: CP14BasicEffectUnstable
+  name: cp14-reagent-name-basic-unstable
+  desc: cp14-reagent-desc-basic-unstable
+  group: CP14BasicEffect
+  flavor: CP14Vomit
+  color: "#fa7d00"
+  physicalDesc: cp14-reagent-physical-desc-viscous
+  metabolisms:
+    Poison:
+      effects:
+      - !type:HealthChange
+        damage:
+          types:
+            Poison: 2.5
 
 # USELESS
 # Things that don't directly affect gameplay.
@@ -240,3 +256,4 @@
     Food:
       effects:
       - !type:Jitter
+  
