--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/chromium_slime.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/chromium_slime.yml
@@ -35,3 +35,15 @@
       #
       #CP14BasicEffectRainbow: 
       #CP14BasicEffectEmoteCough:
+
+# Simple brewing
+
+- type: reaction
+  id: CP14ChromiumBrewing
+  minTemp: 500
+  priority: 2
+  reactants:
+    CP14ChromiumSlime:
+      amount: 1
+  products:
+    CP14BasicEffectUnstable: 1
