--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/general.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Alchemy/general.yml
@@ -10,3 +10,16 @@
     prototypeId: CP14Mist
     sound:
       path: /Audio/Effects/smoke.ogg
+
+- type: reaction
+  id: CP14UnstableCooling
+  maxTemp: 300
+  reactants:
+    CP14BasicEffectUnstable:
+      amount: 1
+  effects:
+  - !type:AreaReactionEffect
+    duration: 20
+    prototypeId: CP14Mist
+    sound:
+      path: /Audio/Effects/smoke.ogg
