remove alchemy test and battle royale maps, add simple island map

--- a/Resources/Maps/_CP14/tavern.yml
+++ b/Resources/Maps/_CP14/tavern.yml
@@ -46,7 +46,7 @@ entities:
     - type: GridTree
     - type: MovedGrids
     - type: BecomesStation
-      id: ExpeditionTest
+      id: Village
     - type: CP14WeatherController
       entries:
       - visuals: CP14Rain
