--- a/Resources/Prototypes/_CP14/Maps/arenas.yml
+++ b/Resources/Prototypes/_CP14/Maps/arenas.yml
@@ -14,59 +14,14 @@
             CP14Adventurer: [ -1, -1 ]
 
 - type: gameMap
-  id: AlchemyTest
-  mapName: Alchemy test
-  mapPath: /Maps/_CP14/alchemy_test.yml
-  maxRandomOffset: 0
-  randomRotation: false
-  minPlayers: 0
-  stations:
-    AlchemyTest:
-      stationProto: CP14BaseExpedition
-      components:
-        - type: CP14StationZLevels
-          defaultMapLevel: 0
-          levels:
-            1:
-              path: /Maps/_CP14/alchemy_test_layer2.yml
-        - type: StationNameSetup
-          mapNameTemplate: "Alchemy test"
-        - type: StationJobs
-          availableJobs:
-            CP14Adventurer: [ -1, -1 ]
-            CP14Alchemist: [ -1, -1 ]
-            #CP14Captain: [1, 1]
-
-- type: gameMap
-  id: BattleRoyale
-  mapName: Battle royale
-  mapPath: /Maps/_CP14/battle_royale.yml
-  maxRandomOffset: 0
-  randomRotation: false
-  minPlayers: 0
-  stations:
-    BattleRoyale:
-      stationProto: CP14BaseExpedition
-      components:
-        - type: StationNameSetup
-          mapNameTemplate: "Battle royale"
-        - type: StationJobs
-          availableJobs:
-            CP14Adventurer: [ -1, -1 ]
-            CP14Alchemist: [ -1, -1 ]
-            #CP14Captain: [1, 1]
-        - type: StationBiome
-          biome: CP14GrassFill
-
-- type: gameMap
-  id: ExpeditionTest
+  id: Village
   mapName: Sandbox village
   mapPath: /Maps/_CP14/tavern.yml
   maxRandomOffset: 0
   randomRotation: false
   minPlayers: 0
   stations:
-    ExpeditionTest:
+    Village:
       stationProto: CP14BaseExpedition
       components:
         - type: StationNameSetup
@@ -85,3 +40,20 @@
           levels:
             -1:
               path: /Maps/_CP14/tavern_cave.yml
+
+- type: gameMap
+  id: Island
+  mapName: Island
+  mapPath: /Maps/_CP14/island.yml
+  maxRandomOffset: 0
+  randomRotation: false
+  minPlayers: 0
+  stations:
+    Island:
+      stationProto: CP14BaseExpedition
+      components:
+        - type: StationNameSetup
+          mapNameTemplate: "Island"
+        - type: StationJobs
+          availableJobs:
+            CP14Adventurer: [ -1, -1 ]
