--- a/Resources/Prototypes/_CP14/Maps/Pools/default.yml
+++ b/Resources/Prototypes/_CP14/Maps/Pools/default.yml
@@ -1,7 +1,7 @@
 - type: gameMapPool
   id: DefaultMapPool
   maps:
-   - ExpeditionTest
+   - Village
 
 - type: gameMapPool
   id: DeathMatchMapPool
