--- a/Resources/Prototypes/_CP14/Maps/debug.yml
+++ b/Resources/Prototypes/_CP14/Maps/debug.yml
@@ -32,4 +32,4 @@
           defaultMapLevel: 0
           levels:
             -1:
-              path: /Maps/_CP14/alchemy_test_layer2.yml
+              path: /Maps/_CP14/tavern_cave.yml
