--- a/Resources/Prototypes/_CP14/Procedural/biome_template_caves.yml
+++ b/Resources/Prototypes/_CP14/Procedural/biome_template_caves.yml
@@ -3,7 +3,7 @@
   layers:
     - !type:BiomeTileLayer
       threshold: -1.0
-      tile: CP14FloorBase 
+      tile: CP14FloorBase
 
 - type: biomeTemplate
   id: CP14CavesFloor
@@ -46,20 +46,6 @@
   layers:
     - !type:BiomeMetaLayer
       template: CP14CavesFloor
-    # Lakes start
-    - !type:BiomeEntityLayer
-      allowedTiles:
-        - CP14FloorBase
-      threshold: 0.8
-      noise:
-        seed: 14
-        noiseType: OpenSimplex2
-        fractalType: FBm
-        frequency: 0.01
-        domainWarpType: OpenSimplex2
-        domainWarpAmp: 150
-      entities:
-        - CP14FloorWater
     #Walls
     - !type:BiomeEntityLayer
       threshold: -0.75
@@ -75,37 +61,17 @@
         - CP14FloorBase
       entities:
         - CP14WallStone
-   #Ores
+    # Lakes
     - !type:BiomeEntityLayer
-      threshold: 0.7
-      noise:
-        seed: 10
-        noiseType: OpenSimplex2
-        fractalType: FBm
-        frequency: 3
       allowedTiles:
         - CP14FloorBase
-      entities:
-        - CP14WallStoneGoldOre
-    - !type:BiomeEntityLayer
-      threshold: 0.6
+      threshold: 0.8
       noise:
-        seed: 15
+        seed: 14
         noiseType: OpenSimplex2
         fractalType: FBm
-        frequency: 3
-      allowedTiles:
-        - CP14FloorBase
+        frequency: 0.01
+        domainWarpType: OpenSimplex2
+        domainWarpAmp: 150
       entities:
-        - CP14WallStoneIronOre
-    - !type:BiomeEntityLayer
-      threshold: 0.5
-      noise:
-        seed: 20
-        noiseType: OpenSimplex2
-        fractalType: FBm
-        frequency: 3
-      allowedTiles:
-        - CP14FloorBase
-      entities:
-        - CP14WallStoneCopperOre
+        - CP14FloorWater
