--- a/Resources/Prototypes/_CP14/Procedural/Expeditions/cave_geode.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Expeditions/cave_geode.yml
@@ -1,10 +1,9 @@
 - type: cp14ExpeditionBiome
-  id: Grasslands
-  config: CP14ExpeditionCaveGeode
-  difficulty: 0
+  id: GrasslandIsland
+  config: CP14ExpeditionGrasslandIsland
 
 - type: dungeonConfig
-  id: CP14ExpeditionCaveGeode
+  id: CP14ExpeditionGrasslandIsland
   layers:
     - !type:PrototypeDunGen
       proto: CP14ExpeditionGrasslandIslandFloorMaskSand
@@ -19,11 +18,18 @@
         id: VGRoidInteriorRoomMarker
     # Biome Spawner fills
     - !type:PrototypeDunGen
-      proto: CP14ExpeditionCaveGeodeFillGrassland
+      proto: CP14ExpeditionGrasslandIslandFillGrassland
     - !type:PrototypeDunGen
-      proto: CP14ExpeditionCaveGeodeFillCave
+      proto: CP14ExpeditionGrasslandIslandFillCave
     #- !type:PrototypeDunGen
-    #  proto: CP14ExpeditionCaveGeodeFillBorder
+    #  proto: CP14ExpeditionGrasslandIslandFillBorder
+    # Mobs
+    - !type:MobsDunGen
+      minCount: 5
+      maxCount: 10
+      groups:
+      - id: CP14SpawnMobDinoYumkaraptor
+        amount: 1
     # Ore and resources
     - !type:OreDunGen
       replacement: CP14WallStone
@@ -53,9 +59,9 @@
   id: CP14ExpeditionGrasslandIslandFloorMaskStone
   layers:
   - !type:NoiseDistanceDunGen
-    size: 50, 50
+    size: 80, 80
     distanceConfig: !type:DunGenEuclideanSquaredDistance
-      blendWeight: 0.50
+      blendWeight: 0.5
     layers:
     - tile: CP14FloorBase
       threshold: 0.50
@@ -71,9 +77,9 @@
   id: CP14ExpeditionGrasslandIslandFloorMaskGrass
   layers:
   - !type:NoiseDistanceDunGen
-    size: 80, 80
+    size: 120, 120
     distanceConfig: !type:DunGenEuclideanSquaredDistance
-      blendWeight: 0.60
+      blendWeight: 0.6
     layers:
     - tile: CP14FloorGrass
       threshold: 0.50
@@ -89,7 +95,7 @@
   id: CP14ExpeditionGrasslandIslandFloorMaskSand
   layers:
   - !type:NoiseDistanceDunGen
-    size: 80, 200
+    size: 130, 130
     distanceConfig: !type:DunGenEuclideanSquaredDistance
       blendWeight: 0.7
     layers:
@@ -104,7 +110,7 @@
         gain: 0.5
 
 - type: dungeonConfig
-  id: CP14ExpeditionCaveGeodeFillGrassland
+  id: CP14ExpeditionGrasslandIslandFillGrassland
   reserveTiles: true
   data:
     entities:
@@ -115,7 +121,7 @@
     - CP14FloorGrass
 
 - type: dungeonConfig
-  id: CP14ExpeditionCaveGeodeFillCave
+  id: CP14ExpeditionGrasslandIslandFillCave
   reserveTiles: true
   data:
     entities:
@@ -126,7 +132,7 @@
     - CP14FloorBase
 
 - type: dungeonConfig
-  id: CP14ExpeditionCaveGeodeFillBorder
+  id: CP14ExpeditionGrasslandIslandFillBorder
   reserveTiles: true
   data:
     entities:
