fix: grid dungeon, not map planet dungeon

--- a/Resources/Prototypes/_CP14/Entities/Objects/Economy/wallet.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Economy/wallet.yml
@@ -3,6 +3,7 @@
   description: A small wallet, handy for storing coins.
   id: CP14Wallet
   parent: BaseStorageItem
+  suffix: Empty
   categories: [ ForkFiltered ]
   components:
   - type: Sprite
