--- a/Resources/Prototypes/_CP14/Procedural/Expeditions/T1_Grassland_island/config.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Expeditions/T1_Grassland_island/config.yml
@@ -1,5 +1,5 @@
 - type: cp14ExpeditionBiome
-  id: GrasslandIsland
+  id: T1GrasslandIsland
   config: CP14ExpeditionGrasslandIsland
   components:
   - type: MapLight
