mob water occlusion

--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/zombie.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/zombie.yml
@@ -95,6 +95,7 @@
         type: StrippableBoundUserInterface
   - type: InventorySlots
   - type: ContainerContainer
+  - type: FloorOcclusion
   - type: Inventory
     templateId: CP14Partial
     femaleDisplacements:
