Delete shared MissionParams

--- a/Resources/Prototypes/_CP14/Procedural/Expeditions/T1_Caves/config.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Expeditions/T1_Caves/config.yml
@@ -1,6 +1,6 @@
-- type: cp14ExpeditionBiome
+- type: cp14ExpeditionConfig
   id: T1Caves
-  config: CP14ExpeditionCaves
+  locationConfig: CP14ExpeditionCaves
   components:
   - type: CP14WeatherController
     entries:
