--- a/Resources/Prototypes/_CP14/Procedural/Expeditions/T1_Grassland_island/config.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Expeditions/T1_Grassland_island/config.yml
@@ -1,4 +1,4 @@
-- type: cp14ExpeditionLocation
+- type: cp14DemiplanLocation
   id: T1GrasslandIsland
   locationConfig: CP14ExpeditionGrasslandIsland
   components:
@@ -51,7 +51,7 @@
       maxCount: 2
       table:
         id: CP14GrasslandIslandExteriorRoomSpawner
-    # Biome Spawner fills (from border to center!)
+    # Biome Spawner fills (from border to center!) order is very important! For inexplicable reasons, only a certain sequence works!
     - !type:PrototypeDunGen
       proto: CP14ExpeditionGrasslandIslandFillGrassland
     - !type:PrototypeDunGen
