pass mapid into job

--- a/Resources/Prototypes/_CP14/Entities/subdimensionGenTEST.yml
+++ b/Resources/Prototypes/_CP14/Entities/subdimensionGenTEST.yml
@@ -24,6 +24,6 @@
   parent: CP14BaseSubdimensionalKey
   name: subdimensional key
   components:
-  - type: CP14ExpeditionGenerator
+  - type: CP14CreateDemiplanOnInteract
   - type: Sprite
     state: key1
