--- a/Resources/Prototypes/_CP14/Procedural/Expeditions/T1_Caves/config.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Expeditions/T1_Caves/config.yml
@@ -51,6 +51,13 @@
       groups:
       - id: CP14SpawnMobUndeadZombie
         amount: 1
+    # Exit
+    - !type:MobsDunGen
+      minCount: 2
+      maxCount: 2
+      groups:
+      - id: CP14DemiplanExitRift
+        amount: 1
     # Loot
     - !type:EntityTableDunGen
       minCount: 10
