--- a/Resources/Prototypes/_CP14/Procedural/Expeditions/T1_Grassland_island/config.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Expeditions/T1_Grassland_island/config.yml
@@ -82,6 +82,13 @@
       groups:
       - id: CP14SpawnMobDinoYumkaraptor
         amount: 1
+    # Exit
+    - !type:MobsDunGen
+      minCount: 2
+      maxCount: 2
+      groups:
+      - id: CP14DemiplanRift
+        amount: 1
     # Loot
     - !type:EntityTableDunGen
       minCount: 5
