--- a/Resources/Prototypes/_CP14/Procedural/Expeditions/T1_Grassland_island/config.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Expeditions/T1_Grassland_island/config.yml
@@ -93,7 +93,7 @@
       minCount: 2
       maxCount: 2
       groups:
-      - id: CP14DemiplanRift
+      - id: CP14DemiplanExitRift
         amount: 1
     # Loot
     - !type:EntityTableDunGen
